Fix: Remove spacing between 100+ and countries
- Set line-height: 1 and padding: 0 for both elements
- Ensures zero gap between number and label

--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -565,8 +565,10 @@
 	font-size: 32px;
 	font-weight: 500;
 	margin: 0;
+	padding: 0;
 	color: #fff;
 	text-align: center;
+	line-height: 1;
 }
 
 .world-map-label-bottom {
@@ -574,7 +576,9 @@
 	font-size: 14px;
 	font-weight: 400;
 	margin: 0;
+	padding: 0;
 	color: #fff;
 	opacity: 0.8;
 	text-align: center;
+	line-height: 1;
 }
